Fix box alignment on home page

--- a/source/style.scss
+++ b/source/style.scss
@@ -183,10 +183,6 @@ footer {
     .Type { color: #008000;  }
 }
 
-.home {
-    padding-left: 15px;
-}
-
 #recent_blog_posts {
     padding-left: 5px;
     padding-right: 5px;
